# barometer

./: Cargo.toml  README.md  display.sh  load_pico.sh
.cargo/: config.toml
src/: calc.rs  main.rs
src/calc/: absolute_humidity.rs  air_denisty.rs  altitude.rs  dew_point.rs  enthalpy.rs  heat_index.rs  mixing_ratio.rs  psychometric.rs  saturation_vapor_pressure.rs  specific_humidity.rs  vapor_pressure.rs  vapor_pressure_deficit.rs  wet_bulb.rs
